// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectUsagePlan /> should not render without subscriptions 1`] = `null`;

exports[`<ProjectUsagePlan /> should render properly 1`] = `
.emotion-0 {
  padding-right: 32px;
  padding-bottom: 32px;
  width: 470px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #3b3b3b;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
  border-radius: 2px;
}

.emotion-2 {
  padding: 16px;
  border-bottom: 1px solid #4a4a4a;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 svg {
  margin-right: 8px;
}

.emotion-3 {
  padding: 32px;
}

.emotion-4 {
  padding-bottom: 24px;
  font-size: 15px;
  line-height: 19px;
}

.emotion-5 {
  border-bottom: 1px solid #4a4a4a;
  padding-bottom: 16px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 img {
  margin-right: 12px;
}

.emotion-7 {
  padding-top: 16px;
  padding-bottom: 16px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <h3
      className="emotion-2"
    >
      Project Tier: Premier
    </h3>
    <div
      className="emotion-3"
    >
      <h3
        className="emotion-4"
      >
        Usage:
      </h3>
      <div
        className="emotion-5"
      >
        <h4
          className="emotion-6"
        >
          <img
            alt=""
            src="/icons/videos.png"
            width={32}
          />
           Video Hours: 
          0
        </h4>
      </div>
      <div
        className="emotion-7"
      >
        <h4
          className="emotion-6"
        >
          <img
            alt=""
            src="/icons/images.png"
            width={32}
          />
           Image / Documents: 
          97
        </h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProjectUsagePlan /> should render properly with no modules 1`] = `
.emotion-0 {
  padding-right: 32px;
  padding-bottom: 32px;
  width: 470px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #3b3b3b;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
  border-radius: 2px;
}

.emotion-2 {
  padding: 16px;
  border-bottom: 1px solid #4a4a4a;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 svg {
  margin-right: 8px;
}

.emotion-3 {
  padding: 32px;
}

.emotion-4 {
  padding-bottom: 24px;
  font-size: 15px;
  line-height: 19px;
}

.emotion-5 {
  border-bottom: 1px solid #4a4a4a;
  padding-bottom: 16px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 img {
  margin-right: 12px;
}

.emotion-7 {
  padding-top: 16px;
  padding-bottom: 16px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <h3
      className="emotion-2"
    >
      Project Tier: Premier
    </h3>
    <div
      className="emotion-3"
    >
      <h3
        className="emotion-4"
      >
        Usage:
      </h3>
      <div
        className="emotion-5"
      >
        <h4
          className="emotion-6"
        >
          <img
            alt=""
            src="/icons/videos.png"
            width={32}
          />
           Video Hours: 
          0
        </h4>
      </div>
      <div
        className="emotion-7"
      >
        <h4
          className="emotion-6"
        >
          <img
            alt=""
            src="/icons/images.png"
            width={32}
          />
           Image / Documents: 
          97
        </h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProjectUsagePlan /> should render properly with over usage 1`] = `
.emotion-0 {
  padding-right: 32px;
  padding-bottom: 32px;
  width: 470px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #3b3b3b;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
  border-radius: 2px;
}

.emotion-2 {
  padding: 16px;
  border-bottom: 1px solid #4a4a4a;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 svg {
  margin-right: 8px;
}

.emotion-3 {
  padding: 32px;
}

.emotion-4 {
  padding-bottom: 24px;
  font-size: 15px;
  line-height: 19px;
}

.emotion-5 {
  border-bottom: 1px solid #4a4a4a;
  padding-bottom: 16px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 img {
  margin-right: 12px;
}

.emotion-7 {
  padding-top: 16px;
  padding-bottom: 16px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <h3
      className="emotion-2"
    >
      Project Tier: Premier
    </h3>
    <div
      className="emotion-3"
    >
      <h3
        className="emotion-4"
      >
        Usage:
      </h3>
      <div
        className="emotion-5"
      >
        <h4
          className="emotion-6"
        >
          <img
            alt=""
            src="/icons/videos.png"
            width={32}
          />
           Video Hours: 
          320
        </h4>
      </div>
      <div
        className="emotion-7"
      >
        <h4
          className="emotion-6"
        >
          <img
            alt=""
            src="/icons/images.png"
            width={32}
          />
           Image / Documents: 
          30,040
        </h4>
      </div>
    </div>
  </div>
</div>
`;
